--- a/react-ts-app/package.json
+++ b/react-ts-app/package.json
@@ -30,6 +30,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.7.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
@@ -37,7 +38,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^21.1.1",
     "prettier": "^2.8.4",
-    "typescript": "^4.9.3",
+    "sass": "^1.59.3",
+    "typescript": "^4.9.5",
     "vite": "^4.1.0",
     "vitest": "^0.29.2"
   }
