feat: complete header & search bar

--- a/react-ts-app/tsconfig.json
+++ b/react-ts-app/tsconfig.json
@@ -23,7 +23,7 @@
     "./src/**/*",
     "styled.d.ts",
     "vite.config.ts",
-    ".eslintrc.cjs"
+    ".eslintrc.cjs",
   ],
   "references": [
     {
