--- a/react-ts-app/package.json
+++ b/react-ts-app/package.json
@@ -15,7 +15,8 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
