--- a/react-ts-app/package.json
+++ b/react-ts-app/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^5.10.2",
     "jsdom": "^21.1.1",
     "prettier": "^2.8.4",
     "sass": "^1.59.3",
