--- a/react-ts-app/package.json
+++ b/react-ts-app/package.json
@@ -15,6 +15,7 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.8",
     "react-router-dom": "^6.9.0",
     "vite-plugin-svgr": "^2.4.0"
   },
