--- a/react-ts-app/package.json
+++ b/react-ts-app/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.10.2",
     "jsdom": "^21.1.1",
+    "msw": "^1.2.1",
     "prettier": "^2.8.4",
     "sass": "^1.59.3",
     "typescript": "^4.9.5",
