feat: move application to the server and enable server side rendering

--- a/react-ts-app/tsconfig.json
+++ b/react-ts-app/tsconfig.json
@@ -23,8 +23,13 @@
     "./src/**/*",
     "styled.d.ts",
     "vite.config.ts",
-    ".eslintrc.cjs",
+    ".eslintrc.cjs"
   ],
+  "exclude": ["node_modules"],
+  "ts-node": {
+    "esm": true,
+    "transpileOnly": true
+  },
   "references": [
     {
       "path": "./tsconfig.node.json"
