--- a/react-ts-app/package.json
+++ b/react-ts-app/package.json
@@ -4,8 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "nodemon",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "vite build --outDir dist/client",
+    "build:server": "vite build --outDir dist/server --ssr src/ServerApp.tsx",
     "preview": "vite preview",
     "lint": "eslint .",
     "test": "vitest",
@@ -14,6 +16,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "classnames": "^2.3.2",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.8",
@@ -26,6 +29,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
@@ -45,8 +50,10 @@
     "eslint-plugin-testing-library": "^5.10.2",
     "jsdom": "^21.1.1",
     "msw": "^1.2.1",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.4",
     "sass": "^1.59.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "vite": "^4.1.0",
     "vitest": "^0.29.2"
