fix: eslint errors

--- a/react-ts-app/tsconfig.json
+++ b/react-ts-app/tsconfig.json
@@ -23,7 +23,8 @@
     "./src/**/*",
     "styled.d.ts",
     "vite.config.ts",
-    ".eslintrc.cjs"
+    ".eslintrc.cjs",
+    "**/*.tsx"
   ],
   "exclude": ["node_modules"],
   "ts-node": {
