docs: add cypress

--- a/react-ts-app/tsconfig.json
+++ b/react-ts-app/tsconfig.json
@@ -20,13 +20,18 @@
     "resolveJsonModule": true
   },
   "include": [
-    "./src/**/*",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.cjs",
+    "**/*.mjs",
     "styled.d.ts",
     "vite.config.ts",
     ".eslintrc.cjs",
     "**/*.tsx"
   ],
-  "exclude": ["node_modules"],
+  "exclude": [
+    "node_modules"
+  ],
   "ts-node": {
     "esm": true,
     "transpileOnly": true
