--- a/react-ts-app/package.json
+++ b/react-ts-app/package.json
@@ -11,7 +11,8 @@
     "preview": "vite preview",
     "lint": "eslint .",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage:unit": "vitest run --coverage",
+    "coverage:cypress": "npx nyc report --reporter=text-summary"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
@@ -25,10 +26,13 @@
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.10.4",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@testing-library/dom": "^9.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/cypress__code-coverage": "^3.10.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.27",
@@ -37,7 +41,9 @@
     "@typescript-eslint/parser": "^5.55.0",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-istanbul": "^0.29.2",
+    "babel-plugin-istanbul": "^6.1.1",
     "cypress": "^12.10.0",
+    "cypress-vite": "^1.4.0",
     "eslint": "8.22.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -53,11 +59,14 @@
     "jsdom": "^21.1.1",
     "msw": "^1.2.1",
     "nodemon": "^2.0.22",
+    "nyc": "^15.1.0",
     "prettier": "^2.8.4",
     "sass": "^1.59.3",
+    "start-server-and-test": "^2.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "vite": "^4.1.0",
+    "vite-plugin-istanbul": "^4.0.1",
     "vitest": "^0.29.2"
   }
 }
