docs: add command for open cypress

--- a/react-ts-app/package.json
+++ b/react-ts-app/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview",
     "lint": "eslint .",
     "test": "vitest",
+    "cypress": "npx cypress open",
     "coverage:unit": "vitest run --coverage",
     "coverage:cypress": "npx nyc report --reporter=text-summary"
   },
